feat: update tsm offices
