# server/src/controllers/UserController.ts
@@ -277,6 +277,24 @@ export class UserController {
         next(error);
     }
   }
+
+  updateTsm = async(req: Request<{ id: string }>, res: Response, next: NextFunction) => {
+    try {
+      const tsmId = Number.parseInt(req.params.id, 10);
+      if (Number.isNaN(tsmId)) throw new BadRequestError('Id must be a valid number');
+
+      console.log(req.body)
+      console.log("length: " + req.body.officeIds.length);
+      if(!req.body.officeIds || !Array.isArray(req.body.officeIds) || req.body.officeIds.length === 0) {
+        throw new BadRequestError('officeIds must be a not empty array of numbers');
+      }
+
+      const updatedTsm = await this.userService.updateTsm(tsmId, req.body.officeIds);
+      res.status(200).json({ message: "TSM availability updated successfully", updatedTsm });
+    } catch (error) {
+        next(error);
+    }
+  }
 }
 
 interface tokenDatas extends JwtPayload {
